--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,10 +1,11 @@
 @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,600;0,700;1,100&display=swap');
+@import url('http://fonts.cdnfonts.com/css/proxima-nova-2');
 
 :root {
     --primary: #fe2c55;
     --black: #000;
-    // --white: #fff;
+    --white: #fff;
     --text-color: #333;
 
     // Default layout
@@ -16,7 +17,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: 'Proxima Nova', sans-serif;
 }
 
 html {
