--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -18,7 +18,7 @@
     align-items: center;
     justify-content: space-between;
     padding-left: 20px;
-    padding-right: 20px;
+    padding-right: 24px;
 }
 
 .search,
@@ -102,7 +102,24 @@
 }
 
 .action {
+    display: flex;
+    align-items: center;
+
     .login-btn {
+        min-width: 100px;
         margin-left: 16px;
     }
+
+    .upload-btn {
+        width: 113.63px;
+        padding-right: 16px;
+    }
+}
+
+.more-btn {
+    cursor: pointer;
+    font-size: 1.8rem;
+    padding: 3px 11.75px 1px;
+    background-color: transparent;
+    margin-left: 16px;
 }
