--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -1,3 +1,4 @@
+// Menu wrapper
 .menu-list {
     width: 223px;
 
@@ -10,16 +11,38 @@
     padding-bottom: 8px;
 }
 
+// Menu items
 .menu-item {
     width: 100%;
-    height: 42px;
     justify-content: flex-start;
     border-radius: 0;
+    padding: 11px 16px;
     font-weight: 600;
     color: #161823;
-    padding-left: 14px;
+    line-height: 1.8rem;
 
     &:hover {
         background-color: #16182308;
     }
+}
+
+//Header
+.header {
+    margin-top: -8px;
+    position: relative;
+    height: 50px;
+}
+
+.back-btn {
+    width: 50px;
+    height: 100%;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.header-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
