--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -123,3 +123,25 @@
     background-color: transparent;
     margin-left: 16px;
 }
+
+.action-btn {
+    font-size: 2.2rem;
+    color: #161823;
+    background-color: transparent;
+    padding: 4.5px 14px 0;
+    cursor: pointer;
+    margin-left: 6px;
+}
+
+.action-btn + .action-btn {
+    margin-left: 0;
+}
+
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-left: 14px;
+    cursor: pointer;
+}
