--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -2,7 +2,8 @@
     --search-border-radius: 92px;
     --search-height: 46px;
     --search-top-spacer: 9px;
-    --search-bottom-width: 52px;
+    --search-bottom-width: 50px;
+    --search-border: 1.5px;
 
     width: 100%;
     height: var(--default-layout-header-height, 60px);
@@ -29,13 +30,14 @@
 .search {
     position: relative;
     height: var(--search-height);
-    padding-left: 16px;
+    padding-left: calc(16px - var(--search-border));
     display: flex;
     border: 1.5px solid transparent;
     background-color: #1618230f;
     border-radius: var(--search-border-radius);
 
     input {
+        font-family: 'ProximaNova', sans-serif;
         flex: 1;
         height: 100%;
         font-size: 1.6rem;
@@ -44,14 +46,14 @@
         caret-color: var(--primary);
     }
 
-    input:not(:placeholder-shown) ~ .search-btn {
-        color: #161823bf;
+    input:not(:placeholder-shown) ~ .search-btn .search-btn-icon {
+        fill: #161823bf;
     }
 
     &::after {
         content: '';
         position: absolute;
-        top: var(--search-top-spacer);
+        top: calc(var(--search-top-spacer) - var(--search-border));
         right: var(--search-bottom-width);
         width: 1px;
         height: calc(var(--search-height) - var(--search-top-spacer) * 2);
@@ -76,7 +78,8 @@
 .loading {
     position: absolute;
     font-size: 16px;
-    right: calc(var(--search-bottom-width) + 15px);
+    height: 16px;
+    right: calc(var(--search-bottom-width) + 15px - var(--search-border));
     top: 50%;
     translate: 0 -50%;
     color: #16182357;
@@ -85,8 +88,8 @@
 .search-btn {
     width: var(--search-bottom-width);
     height: 100%;
-    padding-top: 2px;
-    padding-right: 1px;
+    padding-top: 4px;
+    padding-right: 2px;
     border-radius: 0 var(--search-border-radius) var(--search-border-radius) 0;
     font-size: 1.8rem;
     color: #16182357;
@@ -125,16 +128,17 @@
 }
 
 .action-btn {
+    margin-left: 16px;
     font-size: 2.2rem;
     color: #161823;
     background-color: transparent;
-    padding: 4.5px 14px 0;
+    height: 32px;
+    width: 32px;
     cursor: pointer;
-    margin-left: 6px;
 }
 
-.action-btn + .action-btn {
-    margin-left: 0;
+.message-icon {
+    padding-top: 3px;
 }
 
 .user-avatar {
@@ -142,6 +146,6 @@
     height: 32px;
     object-fit: cover;
     border-radius: 50%;
-    margin-left: 14px;
+    margin-left: 24px;
     cursor: pointer;
 }
