--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -22,88 +22,7 @@
     padding-right: var(--default-layout-horizontal-spacer-right);
 }
 
-.search,
-.search-result {
-    width: 361px;
-}
-
-.search {
-    position: relative;
-    height: var(--search-height);
-    padding-left: calc(16px - var(--search-border));
-    display: flex;
-    border: 1.5px solid transparent;
-    background-color: #1618230f;
-    border-radius: var(--search-border-radius);
-
-    input {
-        font-family: 'ProximaNova', sans-serif;
-        flex: 1;
-        height: 100%;
-        font-size: 1.6rem;
-        color: var(--black);
-        background-color: transparent;
-        caret-color: var(--primary);
-    }
-
-    input:not(:placeholder-shown) ~ .search-btn .search-btn-icon {
-        fill: #161823bf;
-    }
-
-    &::after {
-        content: '';
-        position: absolute;
-        top: calc(var(--search-top-spacer) - var(--search-border));
-        right: var(--search-bottom-width);
-        width: 1px;
-        height: calc(var(--search-height) - var(--search-top-spacer) * 2);
-        background-color: #1618231f;
-    }
-
-    &:focus-within {
-        border-color: #16182333;
-    }
-}
-
-.search-title {
-    height: 30px;
-    padding: 5px 12px;
-    font-size: 1.4rem;
-    line-height: 20px;
-    color: #16182380;
-    font-weight: 600;
-}
-
-.clear,
-.loading {
-    position: absolute;
-    font-size: 16px;
-    height: 16px;
-    right: calc(var(--search-bottom-width) + 15px - var(--search-border));
-    top: 50%;
-    translate: 0 -50%;
-    color: #16182357;
-}
-
-.search-btn {
-    width: var(--search-bottom-width);
-    height: 100%;
-    padding-top: 4px;
-    padding-right: 2px;
-    border-radius: 0 var(--search-border-radius) var(--search-border-radius) 0;
-    font-size: 1.8rem;
-    color: #16182357;
-    cursor: pointer;
-
-    &:hover {
-        background-color: #16182308;
-    }
-
-    &:active {
-        background-color: #1618230f;
-    }
-}
-
+// Actions
 .action {
     display: flex;
     align-items: center;
@@ -132,6 +51,7 @@
     position: relative;
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-left: 16px;
     font-size: 2.2rem;
     color: #161823;
@@ -139,10 +59,6 @@
     height: 32px;
     width: 32px;
     cursor: pointer;
-}
-
-.message-icon {
-    padding-top: 3px;
 }
 
 .badge {
