hoàn thiện header #1

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,8 @@
     --white: #fff;
     --text-color: #161823;
 
+    --font-family: 'ProximaNova', sans-serif;
+
     // Default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
@@ -24,7 +26,7 @@ html {
 }
 
 body {
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
@@ -52,14 +54,14 @@ a[href] {
 
 @font-face {
     font-family: ProximaNova;
-    src: url('/assets/fonts/Proxima-Nova-Bold.woff');
-    font-weight: 700;
+    src: url('/assets/fonts/ProximaNova-Semibold.woff2');
+    font-weight: 600;
 }
 
 @font-face {
     font-family: ProximaNova;
-    src: url('/assets/fonts/ProximaNova-Semibold.woff2');
-    font-weight: 600;
+    src: url('/assets/fonts/Proxima-Nova-Bold.woff');
+    font-weight: 700;
 }
 
 @font-face {
