hoàn thiện header #2

--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -3,6 +3,12 @@
     width: 361px;
 }
 
+.search-result-wrapper {
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+}
+
 .search {
     position: relative;
     height: var(--search-height);
