--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -20,7 +20,7 @@
 
     input {
         font-family: var(--font-family);
-        flex: 1;
+        width: 100%;
         height: 100%;
         font-size: 1.6rem;
         color: var(--text-color);
@@ -28,11 +28,20 @@
         caret-color: var(--primary);
     }
 
+    .input-wrapper {
+        flex: 1;
+    }
+
+    &:has(.clear) .input-wrapper,
+    &:has(.loading) .input-wrapper {
+        padding-right: 41.5px;
+    }
+
     input::placeholder {
         opacity: 0.75;
     }
 
-    input:not(:placeholder-shown) ~ .search-btn {
+    .input-wrapper:has(input:not(:placeholder-shown)) ~ .search-btn {
         color: #161823bf;
     }
 
@@ -40,7 +49,7 @@
         content: '';
         position: absolute;
         top: calc(var(--search-top-spacer) - var(--search-border));
-        right: var(--search-bottom-width);
+        right: var(--search-button-width);
         width: 1px;
         height: calc(var(--search-height) - var(--search-top-spacer) * 2);
         background-color: #1618231f;
@@ -65,10 +74,19 @@
     position: absolute;
     font-size: 16px;
     height: 16px;
-    right: calc(var(--search-bottom-width) + 15px - var(--search-border));
     top: 50%;
     translate: 0 -50%;
     color: #16182357;
+    width: 40px;
+    right: calc(var(--search-button-width) + 1px);
+    background-color: transparent;
+}
+
+.clear {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: calc(100% + var(--search-border) * 2);
 }
 
 .loading {
@@ -86,7 +104,7 @@
 
 .search-btn {
     position: relative;
-    width: var(--search-bottom-width);
+    width: var(--search-button-width);
     height: 100%;
     padding-top: 4px;
     padding-right: 2px;
@@ -98,7 +116,7 @@
     &:hover {
         background-color: #16182308;
 
-        width: calc(var(--search-bottom-width) + var(--search-border));
+        width: calc(var(--search-button-width) + var(--search-border));
         height: var(--search-height);
 
         padding-right: calc(2px + var(--search-border));
