--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -87,7 +87,7 @@ a {
 
 @font-face {
     font-family: SofiaPro;
-    src: url('/assets/fonts/sofiapro-bold.woff2');
+    src: url('/assets/fonts/sofiapro-bold.woff');
     font-weight: 700;
 }
 
