--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -6,8 +6,8 @@
 
 .container {
     width: var(--default-layout-width, 1150px);
+    max-width: 100%;
     margin-top: var(--default-layout-header-height);
-    padding-left: var(--default-layout-horizontal-spacer-left);
     display: flex;
 }
 
