--- a/src/layouts/components/Sidebar/Sidebar.module.scss
+++ b/src/layouts/components/Sidebar/Sidebar.module.scss
@@ -1,4 +1,8 @@
 .wrapper {
     width: 356px;
-    padding: 20px 0 26px 8px;
+    padding: 20px 8px 26px 8px;
+}
+
+.menu {
+    margin-bottom: 8px;
 }
